# library_manager

./: .gitignore  README.md  cli.py  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  requirements.txt
bunker_core/: urls.py
catalog/: models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_remove_book_rating_remove_book_volume_number_and_more.py  0003_friend_loan.py  0004_rename_is_returned_loan_returned_and_more.py  0011_book_isbn.py  0012_alter_book_format_type.py  0013_readingsession_annualrecord.py  0014_directory_book_directory.py  0016_alter_annualrecord_date_finished_and_more.py
cli/: api.py  books.py  books_write.py  directories.py  loans.py  main.py  wishlist.py
cli/tui/: app.py  constants.py  library_screen.py  modals.py  movie_screens.py  posada_screens.py  screens.py  tabs.py
library_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
library_manager/: settings.py
movies/: models.py  omdb_oracle.py  serializers.py  tmdb_oracle.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_moviewatcher_moviewishlist.py  0003_movieinbox.py  0004_movieinbox_title.py  0006_movieviewingsession_movieannualrecord.py  0007_movie_production_company_movie_writers.py
posada/: engine.py  models.py  urls.py  views.py
posada/conversor/: conversor.py
posada/migrations/: 0003_adventurer_gender.py  0004_item_adventurer_equipped_accessory_and_more.py  0005_remove_adventurer_equipped_accessory_and_more.py  (+10 more)
scraper/: Dockerfile  book_radar.js  index.js  movie_radar.js  package-lock.json  package.json
(+16 files in other folders)
